_build/html/reports/lecture7.log
Traceback (most recent call last):
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/asyncio/base_events.py", line 583, in run_until_complete
    return future.result()
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/client.py", line 541, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/danhammer/streamlitenv/lib/python3.7/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
import pandas
df = pandas.read_csv("~/Downloads/cafo_cleaned.csv"), 
gdf = geopandas.GeoDataFrame(

    geometry=geopandas.points_from_xy(dflon", df.y)
)
------------------

[0;36m  File [0;32m"<ipython-input-14-480a2a701a7e>"[0;36m, line [0;32m5[0m
[0;31m    geometry=geopandas.points_from_xy(dflon", df.y)[0m
[0m                                                   ^[0m
[0;31mSyntaxError[0m[0;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (<ipython-input-14-480a2a701a7e>, line 5)

